fix: add InjectedIdentity to ProviderConfig credentials source enum
InjectedIdentity is a valid credentials source for Crossplane AWS provider
when using pod identity injection. Adding it to the schema enum to fix
kubeconform validation warnings.

Fixes validation error:
'source' does not validate with enum: value must be one of
"None", "Secret", "IRSA", "WebIdentity", "Upbound"

--- a/schemas/providerconfig_v1beta1.json
+++ b/schemas/providerconfig_v1beta1.json
@@ -124,6 +124,7 @@
               "enum": [
                 "None",
                 "Secret",
+                "InjectedIdentity",
                 "IRSA",
                 "WebIdentity",
                 "Upbound"
